--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meno Main - ADSO 2929061 B</title>
-    <style>
-        h1{
-            text-align: center;
-            font-family: Arial;
-            zoom: 2;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <h1>ADSO 2929061 B 👻</h1>
+
+<body class="main-menu">
+    <main>
+        <header>
+            <h1>ADSO 2929061 <span>B</span></h1>
+            <h2>Software & Analysis Development</h2>
+            <img src="images/photo.jpg" alt="photo.jpg">
+            <h3>Jhonatan Florez</h3>
+        </header>
+        <menu>
+            <a href="01-emmet/">
+                <span>01</span>
+                Enmet
+            </a>
+            <a href="02-html/">
+                <span>02</span>
+                Html
+            </a>
+            <a href="03-css/">
+                <span>03</span>
+                Css
+            </a>
+        </menu>
+    </main>
 </body>
+
 </html>
