--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>Jhonatan Florez</h3>
         </header>
         <menu>
-            <a href="01-emmet/">
+            <a href="01m/index.html">
                 <span>01</span>
                 Enmet
             </a>
