--- a/01m/03-multiplication.html
+++ b/01m/03-multiplication.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>03 Multiplication</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
@@ -21,24 +21,25 @@
     </nav>
     <main>
         <header>
-            <h1><span>01</span>Child</h1>
+            <h1><span>03</span>Multiplication</h1>
             <p>
-                This wildcast allows you to create child elements (Nest)
+                This wildcast allows elements to be repeated
             </p>
         </header>
         <section>
             <h3>Example:</h3>
-            <p>ul> li> a ➡️</p>
+            <p>ul> li*3 ➡️</p>
             <h3>Result:</h3>
 
 <!-- - - - - - - - - - - - - - - - - - - -->
 <xmp>
 <ul>
-    <li>
-        <a href=""> </a>
-    </li>
+    <li> </li>
+    <li> </li>
+    <li> </li>
 </ul>
 </xmp>
+
 <!-- - - - - - - - - - - - - - - - - - - -->
 
         </section>
