--- a/01m/04-class.html
+++ b/01m/04-class.html
@@ -21,23 +21,21 @@
     </nav>
     <main>
         <header>
-            <h1><span>01</span>Child</h1>
+            <h1><span>04</span>Class</h1>
             <p>
-                This wildcast allows you to create child elements (Nest)
+                This wildcast allows you to create the class atribute
             </p>
         </header>
         <section>
             <h3>Example:</h3>
-            <p>ul> li> a ➡️</p>
+            <p>div.container1 ➡️</p>
+            <p>div.container2 ➡️</p>
             <h3>Result:</h3>
 
 <!-- - - - - - - - - - - - - - - - - - - -->
 <xmp>
-<ul>
-    <li>
-        <a href=""> </a>
-    </li>
-</ul>
+<div class="container1"> </div>
+<div class="container2"> </div>
 </xmp>
 <!-- - - - - - - - - - - - - - - - - - - -->
 
