--- a/01m/05-classes.html
+++ b/01m/05-classes.html
@@ -21,23 +21,19 @@
     </nav>
     <main>
         <header>
-            <h1><span>01</span>Child</h1>
+            <h1><span>05</span>Classes</h1>
             <p>
-                This wildcast allows you to create child elements (Nest)
+                This wildcast allows you to create the classes
             </p>
         </header>
         <section>
             <h3>Example:</h3>
-            <p>ul> li> a ➡️</p>
+            <p>div.txt-left.txt-bold.txt-red ➡️</p>
             <h3>Result:</h3>
 
 <!-- - - - - - - - - - - - - - - - - - - -->
 <xmp>
-<ul>
-    <li>
-        <a href=""> </a>
-    </li>
-</ul>
+<div class="txt-left txt-bold txt-red"> </div>
 </xmp>
 <!-- - - - - - - - - - - - - - - - - - - -->
 
