--- a/01m/index.html
+++ b/01m/index.html
@@ -23,7 +23,7 @@
             <h1>Emmet</h1>
             <img src="../images/logo.svg" alt="Emmet">
             <p>
-                Revolutinary plugin for most text editions used by web developers whose workflow depends on HTML & CSS.
+                Revolutinary plugin for most text editors used by web developers swhose workflow depends on HTML & CSS.
             </p>
         </header>
         <menu>
@@ -31,22 +31,71 @@
                 <span>01</span>
                 Child
             </a>
-            <a href="02-sibling.html">
+            <a href="../01m/02-sibling.html">
                 <span>02</span>
                 Sibling
             </a>
-            <a href="03-multiplication.html">
+            <a href="../01m/03-multiplication.html">
                 <span>03</span>
                 Multiplication
             </a>
-            <a href="04-class.html">
+            <a href="../01m/04-class.html">
                 <span>04</span>
                 Class
             </a>
-            <a href="05-classes.html">
+            <a href="../01m/05-classes.html">
                 <span>05</span>
                 Classes
             </a>
+            <a href="../01m/06-id.html">
+                <span>06</span>
+                Id
+            </a>
+            <a href="../01m/07-text.html">
+                <span>07</span>
+                Text
+            </a>
+            <a href="../01m/08-custom-attributes.html">
+                <span>08</span>
+                Custom Attributes
+            </a>
+            <a href="../01m/09-item-numbering.html">
+                <span>09</span>
+                Item Numbering
+            </a>
+            <a href="../01m/10-reverse-numbering.html">
+                <span>10</span>
+                Reverse Numbering
+            </a>
+            <a href="../01m/11-base.html">
+                <span>11</span>
+                Base
+            </a>
+            <a href="../01m/12-climp.html">
+                <span>12</span>
+                Climp
+            </a>
+            <a href="../01m/13-grouping.html">
+                <span>13</span>
+                Grouping
+            </a>
+            <a href="../01m/14-lorem.html">
+                <span>14</span>
+                Lorem
+            </a>
+            <a href="../01m/15-documents.html">
+                <span>15</span>
+                Documents
+            </a>
+            <a href="../01m/16-meta-tags.html">
+                <span>16</span>
+                Meta Tags
+            </a>
+            <a href="../01m/17-chanllenge.html">
+                <span>17</span>
+                Chanllenge 😬
+            </a>
+
         </menu>
     </main>
 </body>
