--- a/01m/11-base.html
+++ b/01m/11-base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body class="child">
+<body class="Child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,25 +21,12 @@
     </nav>
     <main>
         <header>
-            <h1><span>01</span>Child</h1>
+            <h1>Child</h1>
             <p>
-                This wildcast allows you to create child elements (Nest)
+                Lorem ipsum dolor sit ammet...
             </p>
         </header>
         <section>
-            <h3>Example:</h3>
-            <p>ul> li> a ➡️</p>
-            <h3>Result:</h3>
-
-<!-- - - - - - - - - - - - - - - - - - - -->
-<xmp>
-<ul>
-    <li>
-        <a href=""> </a>
-    </li>
-</ul>
-</xmp>
-<!-- - - - - - - - - - - - - - - - - - - -->
 
         </section>
     </main>
