--- a/01m/17-chanllenge.html
+++ b/01m/17-chanllenge.html
@@ -4,11 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>17 Chanllenge</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        body{
+            main {
+                section {
+                    p {
+                        font-size: 0.8rem;
+                    }
+                    xmp {
+                        font-size: 0.43rem;
+                    }
+                }
+            }
+        }
+    </style>
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,12 +35,40 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>17</span>Chanllenge</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>header#header>nav.navbar.navbar-inverse.navbar-fixed-top>div.container>(div.navbar-header>(button:button.navbar-toggle[data-toggle=collapse][data-target=.navbar-collapse]>span.sr-only{Togglle
+                navigation}+span.icon-bar*3)+a.navbar-brand[href=index.php]>img[src=imgs/logo.png][alt=""])+(div.collapse.navbar-collapse.navbar-right>ul.nav.navbar-nav>(li>a.link[href=index.html]{inicio})>(li.active.link>a[href=login.html]{ingresar})>(li>a.link[href=registro.html]{registrarse})>(li>a.link[href=contacto.html]{contact0}))
+                ➡️</p>
+            <h3>Result:</h3>
+
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+<header id="header">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target=".navbar-collapse"><span class="sr-only">Togglle navigation</span><span
+                        class="icon-bar"></span><span class="icon-bar"></span><span
+                        class="icon-bar"></span></button><a href="index.php" class="navbar-brand"><img
+                        src="imgs/logo.png" alt=""></a></div>
+            <div class="collapse navbar-collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html" class="link">Inicio</a></li>
+                    <li class="active link"><a href="login.html">Ingresar</a></li>
+                    <li><a href="registro.html" class="link">Registrarse</a></li>
+                    <li><a href="contacto.html" class="link">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+</xmp>
+<!-- - - - - - - - - - - - - - - - - - - -->
 
         </section>
     </main>
