--- a/01m/01_child.html
+++ b/01m/01_child.html
@@ -23,7 +23,7 @@
         <header>
             <h1><span>01</span>Child</h1>
             <p>
-                This wildcast allows you to create child elements (Nest)
+                This wildcard allows you to create child elements (Nest)
             </p>
         </header>
         <section>
