--- a/01m/02-sibling.html
+++ b/01m/02-sibling.html
@@ -23,7 +23,7 @@
         <header>
             <h1><span>02</span>Sibling</h1>
             <p>
-                This wildcast allows you to create sibling elements (Nest)
+                This wildcard allows you to create sibling elements (Nest)
             </p>
         </header>
         <section>
