--- a/01m/03-multiplication.html
+++ b/01m/03-multiplication.html
@@ -23,7 +23,7 @@
         <header>
             <h1><span>03</span>Multiplication</h1>
             <p>
-                This wildcast allows elements to be repeated
+                This wildcard allows elements to be repeated
             </p>
         </header>
         <section>
