--- a/01m/05-classes.html
+++ b/01m/05-classes.html
@@ -23,7 +23,7 @@
         <header>
             <h1><span>05</span>Classes</h1>
             <p>
-                This wildcast allows you to create the classes
+                This wildcard allows you to create the classes
             </p>
         </header>
         <section>
