--- a/01m/06-id.html
+++ b/01m/06-id.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>06 Id</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,12 +21,21 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>06</span>Id</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
+                This wildcard allows you to create id attribute
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>button#btncalc ➡️</p>
+            <h3>Result:</h3>
+
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+<button id="btncalc"> </button>
+</xmp>
+<!-- - - - - - - - - - - - - - - - - - - -->
 
         </section>
     </main>
