--- a/01m/10-reverse-numbering.html
+++ b/01m/10-reverse-numbering.html
@@ -4,11 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>10 Reverse Numbering</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        body {
+            main {
+                header {
+                    h1 {
+                        font-size: 2rem;
+                    }
+                }
+            }
+        }
+    </style>
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,12 +32,27 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>10</span>Reverse Numbering @</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
+                This wildcard allows you to inver the numbering
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>ul>li.num$@-*5 ➡️</p>
+            <h3>Result:</h3>
+
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+<ul>
+    <li class="num5"> </li>
+    <li class="num4"> </li>
+    <li class="num3"> </li>
+    <li class="num2"> </li>
+    <li class="num1"> </li>
+</ul>
+</xmp>
+<!-- - - - - - - - - - - - - - - - - - - -->
 
         </section>
     </main>
