--- a/01m/12-climp-up.html
+++ b/01m/12-climp-up.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>12 Climp Up</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,13 +21,26 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>12</span>Climp Up^</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
+                This wildcard allows you to go up a leve
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>section>article>div^p ➡️</p>
+            <h3>Result:</h3>
 
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+<section>
+    <article>
+        <div> </div>
+    </article>
+    <p> </p>
+</section>
+</xmp>
+<!-- - - - - - - - - - - - - - - - - - - -->
         </section>
     </main>
 </body>
