--- a/01m/15-HTML-documents.html
+++ b/01m/15-HTML-documents.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>09 Item Numbering</title>
+    <title>15 HTML Documents</title>
     <link rel="stylesheet" href="../css/styles.css">
     <style>
         body {
             main {
-                header {
-                    h1 {
-                        font-size: 2rem;
-                    }
+                section {
+                    padding: 1rem;
+                    background-color: var(--color-1);
+                    border-radius: 4px;
+                    margin-block: 1rem;
+                    min-height: 25vh;
+                    min-width: 600px;
                 }
             }
         }
@@ -32,35 +35,44 @@
     </nav>
     <main>
         <header>
-            <h1><span>09</span>Item Numbering $</h1>
+            <h1><span>15</span>HTML Documents</h1>
             <p>
-                This wildcard allows consecutive numbers
+                This wildcard allows you to create different types of HTML documents
             </p>
         </header>
         <section>
             <h3>Example:</h3>
-            <p>ul>li.num$*5 ➡️</p>
-            <p>section>article.sec$$$*3 ➡️</p>
+            <p>! ➡️</p>
+            <p>html:5 ➡️</p>
             <h3>Result:</h3>
 
 <!-- - - - - - - - - - - - - - - - - - - -->
 <xmp>
-<ul>
-    <li class="num1"> </li>
-    <li class="num2"> </li>
-    <li class="num3"> </li>
-    <li class="num4"> </li>
-    <li class="num5"> </li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
 
-<section>
-    <article class="sec001"> </article>
-    <article class="sec002"> </article>
-    <article class="sec003"> </article>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
 </xmp>
 <!-- - - - - - - - - - - - - - - - - - - -->
-
         </section>
     </main>
 </body>
