--- a/01m/16-meta-tags.html
+++ b/01m/16-meta-tags.html
@@ -4,11 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>16 Meta Tags</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        body {
+            main {
+                section {
+                    padding: 1rem;
+                    background-color: var(--color-1);
+                    border-radius: 4px;
+                    margin-block: 1rem;
+                    min-height: 25vh;
+                    min-width: 600px;
+                }
+            }
+        }
+    </style>
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,13 +35,22 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>16</span>Meta Tags</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
+                This wildcard allows you to create meta tag
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>meta:vp ➡️</p>
+            <p>meta:utf ➡️</p>
+            <h3>Result:</h3>
 
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+</xmp>
         </section>
     </main>
 </body>
