--- a/01m/17-chanllenge.html
+++ b/01m/17-chanllenge.html
@@ -7,14 +7,22 @@
     <title>17 Chanllenge</title>
     <link rel="stylesheet" href="../css/styles.css">
     <style>
-        body{
+        body {
             main {
                 section {
+                    padding: 1rem;
+                    background-color: var(--color-1);
+                    border-radius: 4px;
+                    margin-block: 1rem;
+                    min-height: 25vh;
+                    min-width: 800px;
+    
                     p {
                         font-size: 0.8rem;
                     }
+    
                     xmp {
-                        font-size: 0.43rem;
+                        font-size: 0.80rem;
                     }
                 }
             }
