--- a/01m/04-class.html
+++ b/01m/04-class.html
@@ -23,7 +23,7 @@
         <header>
             <h1><span>04</span>Class</h1>
             <p>
-                This wildcast allows you to create the class atribute
+                This wildcard allows you to create the class atribute
             </p>
         </header>
         <section>
