--- a/01m/08-custom-attributes.html
+++ b/01m/08-custom-attributes.html
@@ -4,11 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>08 Custom Attributes</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        body {
+            main {
+                header {
+                    h1 {
+                        font-size: 2rem;
+                    }
+                }
+            }
+        }
+    </style>
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,12 +32,23 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>08</span>Custom Attributes []</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
+                This wildcard allows you to create custom attributes
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>a[href=www.google.com] ➡️</p>
+            <p>input[type=range] ➡️</p>
+            <h3>Result:</h3>
+
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+<a href="www.google.com"> </a>
+<input type="range">
+</xmp>
+<!-- - - - - - - - - - - - - - - - - - - -->
 
         </section>
     </main>
