--- a/01m/11-base-numbering.html
+++ b/01m/11-base-numbering.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>11 Base Numbering</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,12 +21,27 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>11</span>Base @n</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
+                This wildcard allows you to define a base for numbering
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>ul>li.num$@3*5 ➡️</p>
+            <h3>Result:</h3>
+
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+<ul>
+    <li class="num3"> </li>
+    <li class="num4"> </li>
+    <li class="num5"> </li>
+    <li class="num6"> </li>
+    <li class="num7"> </li>
+</ul>
+</xmp>
+<!-- - - - - - - - - - - - - - - - - - - -->
 
         </section>
     </main>
