--- a/01m/13-grouping.html
+++ b/01m/13-grouping.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>13 Grouping</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,13 +21,26 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>13</span>Grouping ()</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
+                This wildcard allows you to group elements
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>(header>nav) + (section>article) ➡️</p>
+            <h3>Result:</h3>
 
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+<header>
+    <nav> </nav>
+</header>
+<section>
+    <article></article>
+</section>
+</xmp>
+<!-- - - - - - - - - - - - - - - - - - - -->
         </section>
     </main>
 </body>
