--- a/01m/14-lorem.html
+++ b/01m/14-lorem.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Child</title>
+    <title>14 Lorem</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body class="Child">
+<body class="child">
     <nav>
         <a href="../01m/index.html">
             <svg xmlns="http://www.w3.org/2000/svg"
@@ -21,13 +21,23 @@
     </nav>
     <main>
         <header>
-            <h1>Child</h1>
+            <h1><span>14</span>Lorem ()</h1>
             <p>
-                Lorem ipsum dolor sit ammet...
+                This wildcard allows you to create dummy text
             </p>
         </header>
         <section>
+            <h3>Example:</h3>
+            <p>lorem5 ➡️</p>
+            <p>lorem3 ➡️</p>
+            <h3>Result:</h3>
 
+<!-- - - - - - - - - - - - - - - - - - - -->
+<xmp>
+Lorem ipsum dolor sit amet.
+Lorem, ipsum dolor.
+</xmp>
+<!-- - - - - - - - - - - - - - - - - - - -->
         </section>
     </main>
 </body>
