--- a/01m/index.html
+++ b/01m/index.html
@@ -67,13 +67,13 @@
                 <span>10</span>
                 Reverse Numbering
             </a>
-            <a href="../01m/11-base.html">
+            <a href="../01m/11-base-numbering.html">
                 <span>11</span>
-                Base
+                Base Numbering
             </a>
-            <a href="../01m/12-climp.html">
+            <a href="../01m/12-climp-up.html">
                 <span>12</span>
-                Climp
+                Climp UP
             </a>
             <a href="../01m/13-grouping.html">
                 <span>13</span>
@@ -83,9 +83,9 @@
                 <span>14</span>
                 Lorem
             </a>
-            <a href="../01m/15-documents.html">
+            <a href="../01m/15-HTML-documents.html">
                 <span>15</span>
-                Documents
+                HTML Documents
             </a>
             <a href="../01m/16-meta-tags.html">
                 <span>16</span>
