--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>ADSO 2929061 <span>B</span></h1>
             <h2>Software & Analysis Development</h2>
-            <img src="images/photo.jpg" alt="photo.jpg">
+            <img src="https://tinyurl.com/yr8bbf8r" alt="photo.jpg">
             <h3>Jhonatan Florez</h3>
         </header>
         <menu>
@@ -21,7 +21,7 @@
                 <span>01</span>
                 Enmet
             </a>
-            <a href="02-html/">
+            <a href="02-html/index.html">
                 <span>02</span>
                 Html
             </a>
