--- a/02-html/01-document.html
+++ b/02-html/01-document.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>01 - HTML 5 Document</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        body {
+            main {
+                section {
+                    padding: 1rem;
+                    background-color: var(--color-1);
+                    border-radius: 4px;
+                    margin-block: 1rem;
+                    min-height: 10vh;
+                    min-width: 600px;
+                }
+            }
+        }
+    </style>
 </head>
 
 <body class="html">
@@ -27,18 +41,9 @@
             </p>
         </header>
         <section>
-            <p></p>
-
-<!-- - - - - - - - - - - - - - - - - - - -->
-<xmp>
-<ul>
-    <li>
-        <a href=""> </a>
-    </li>
-</ul>
-</xmp>
-<!-- - - - - - - - - - - - - - - - - - - -->
-
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus sapiente dolor deleniti id aliquam
+            voluptate voluptatibus in sit, voluptas quasi. Eius pariatur sed est culpa, similique ad itaque iure
+            adipisci.
         </section>
     </main>
 </body>
