--- a/02-html/02-text.html
+++ b/02-html/02-text.html
@@ -58,7 +58,7 @@
                 <em>Dolorem quas laburum aliquid omnis officia</em>
                 <i>tempora,</i>
                 <b>culpa, sunt non, ipsam expedita</b>
-                quis repudiandae dolorum voluptatem! Natus doloremque aliquam asperiores &nbsp;&nbsp;&nbsp;nesciunt!
+                "quis repudiandae dolorum voluptatem! Natus doloremque aliquam asperiores &nbsp;nesciunt!"
             </p>
 
         </section>
