--- a/02-html/03-anchors.html
+++ b/02-html/03-anchors.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>03 - Anchors</title>
     <link rel="stylesheet" href="../css/styles.css">
+
+
 </head>
 
 <body class="html">
@@ -21,7 +23,7 @@
     </nav>
     <main>
         <header>
-            <h1><span>03</span>Link (Anchar)</h1>
+            <h1><span>03</span>Link (Anchor)</h1>
             <p>
                 This tag allows you link to a specific resource
             </p>
