--- a/02-html/04-script.html
+++ b/02-html/04-script.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>04 - Script</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        body {
+            main {
+                section {
+                    padding: 1rem;
+                    background-color: var(--color-1);
+                    border-radius: 4px;
+                    margin-block: 1rem;
+                    min-height: 7vh;
+                    min-width: 600px;
+                }
+            }
+        }
+    </style>
 </head>
 
 <body class="html">
@@ -23,7 +37,7 @@
         <header>
             <h1><span>04</span>Script (Js)</h1>
             <p>
-                This tag allow you to insert code in JavaScrpt
+                This tag allows you to insert code in JavaScrpt
             </p>
         </header>
         <section>
