--- a/02-html/05-link.html
+++ b/02-html/05-link.html
@@ -7,6 +7,20 @@
     <title>05 - Link</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/custom.css">
+    <style>
+        body {
+            main {
+                section {
+                    padding: 1rem;
+                    background-color: var(--color-1);
+                    border-radius: 4px;
+                    margin-block: 1rem;
+                    min-height: 12vh;
+                    min-width: 600px;
+                }
+            }
+        }
+    </style>
 </head>
 
 <body class="html">
@@ -22,9 +36,9 @@
     </nav>
     <main>
         <header>
-            <h1><span>05</span>Link</h1>
+            <h1><span>05</span>Link (CSS)</h1>
             <p>
-                This tog allow you to insert code in JavaScrpt
+                This tag allows you to insert code in CSS
             </p>
         </header>
         <section>
