--- a/02-html/07-lists.html
+++ b/02-html/07-lists.html
@@ -30,7 +30,7 @@
         <header>
             <h1><span>07</span>Lists</h1>
             <p>
-                This tog allow you to insert code in JavaScrpt
+                This tag allows you to create ordered & unordered lists
             </p>
         </header>
         <section>
@@ -38,20 +38,20 @@
             <ol type="I">
                 <li>Java</li>
                 <li>Python</li>
-                <ol type="3">
-                    <li>Flak</li>
+                <ol type="A">
+                    <li>Flask</li>
                     <li>DJango</li>
                 </ol>
                 <li>Ruby</li>
                 <li>C Sharp</li>
             </ol>
-
+            <br>
             <h3>Unordered List:</h3>
             <ul>
                 <li>Kaiju Number 8</li>
-                <li>Mgic & Muscles</li>
-                <li>One Puch Mna</li>
-                <li>Seven Deadly Signs</li>
+                <li>Magic & Muscles</li>
+                <li>One Puch Man</li>
+                <li>Seven Deadly Sins</li>
             </ul>
         </section>
     </main>
