--- a/02-html/09-tables.html
+++ b/02-html/09-tables.html
@@ -7,6 +7,7 @@
     <title>09 - Tables</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/custom.css">
+
     <style>
         table {
             border-collapse: collapse;
@@ -17,26 +18,26 @@
 
                 th,
                 td {
+                    border: 1px solid #000;
                     background: #fffc;
-                    border: 1px solid #fff9;
                     text-align: center;
                     padding: 4px;
                 }
+            }
+        }
 
-                tbody {
-                    td {
-                        background: #fff6;
-                        border: 1px solid #fff9;
-                        font-size: 0.8rem;
-                        padding: 4px;
-                    }
+        tbody {
+            td {
+                background: #fffc;
+                border: 1px solid #000;
+                font-size: 0.8rem;
+                padding: 4px;
+            }
+        }
 
-                    tr:nth-of-type(even) {
-                        td {
-                            background: #fff9;
-                        }
-                    }
-                }
+        tr:nth-of-type(even) {
+            td {
+                background: #fff9;
             }
         }
     </style>
@@ -66,7 +67,7 @@
                     <!-- Tr es fila -->
                     <tr>
                         <!-- Th son los encabezados de las filas -->
-                        <th>Nombre</th>
+                        <th>Name</th>
                         <th>Last Name</th>
                         <th>Gender</th>
                         <th>Age</th>
@@ -75,34 +76,40 @@
                 <tbody>
                     <tr>
                         <!-- Td son las columnas -->
-                        <td>Juan</td>
-                        <td>Sanchez</td>
+                        <td>Homer</td>
+                        <td>Simpson</td>
                         <td>Male</td>
-                        <td>21</td>
+                        <td>40</td>
                     </tr>
                     <tr>
-                        <td>David</td>
-                        <td>Flor</td>
-                        <td>Male</td>
-                        <td>20</td>
-                    </tr>
-                    <tr>
-                        <td>Jhonnatan</td>
-                        <td>Florez</td>
-                        <td>Male</td>
-                        <td>20</td>
-                    </tr>
-                    <tr>
-                        <td>Maria</td>
-                        <td>Guarin</td>
+                        <td>Marge</td>
+                        <td>Simpson</td>
                         <td>Female</td>
-                        <td>20</td>
+                        <td>39</td>
+                    </tr>
+                    <tr>
+                        <td>Bart</td>
+                        <td>Simpson</td>
+                        <td>Male</td>
+                        <td>12</td>
+                    </tr>
+                    <tr>
+                        <td>Lisa</td>
+                        <td>Simpson</td>
+                        <td>Female</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>Maggie</td>
+                        <td>Simpson</td>
+                        <td>Female</td>
+                        <td>1</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <!-- Esta fila tiene una celda que abarca 4 columnas -->
-                        <td colspan="4">Sipson Family</td>
+                        <td colspan="4">Simpson Family</td>
                     </tr>
                 </tfoot>
             </table>
