--- a/02-html/relative-path/index.html
+++ b/02-html/relative-path/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relactive Path (Index)</title>
+    <title>Relative Path (Index)</title>
     <link rel="stylesheet" href="sections/css/styles.css">
 </head>
 
 <body>
     <main>
-        <hader>
-            <a href="javasrcrip:;" class="active">Home</a>
+        <header>
+            <a href="javascrip:;" class="active">Home</a>
             <a href="sections/about.html">About</a>
             <a href="sections/services.html">Services</a>
             <a href="sections/contact.html">Contact</a>
-        </hader>
+        </header>
         <section>
             <h1>Home</h1>
             <img src="./images/index.png" alt="Home">
