--- a/02-html/relative-path/sections/about.html
+++ b/02-html/relative-path/sections/about.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relactive Path (Index)</title>
-    <link rel="stylesheet" href="../sections/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <main>
-        <hader>
+        <header>
             <a href="../index.html">Home</a>
             <a href="javasrcrip:;" class="active">About</a>
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
-        </hader>
+        </header>
         <section>
             <h1>About</h1>
             <img src="../images/about.png" alt="About">
